--- a/css/main.css
+++ b/css/main.css
@@ -372,11 +372,7 @@ hr {
     display: none;
   }
   .navpar {
-    margin: 5px 20px;
-  }
-  
-  .navpar .nav-icons {
-  margin-top: 0px;
+    margin: 0 20px;
   }
   .navpar .logo img {
     width: 100px;
@@ -404,7 +400,7 @@ hr {
     margin: 0;
   }
   hr {
-    margin-top: 20px;
+    margin-top: 25px;
   }
   .introduce {
     margin-top: -600px;
