--- a/css/Quiz.css
+++ b/css/Quiz.css
@@ -88,12 +88,9 @@
     font-size: 18px;
   }
 }
-.mood h6 {
-  margin-left: 10px;
-  margin-top: 8px;
-}
 .mood img {
   width: 25px;
+  padding-top: 5px;
 }
 .mood .btn-dark, .mood .btn-light {
   width: 120px;
@@ -102,7 +99,12 @@
   background-color: #818181;
   border-radius: 15px;
   border: 0;
-  margin-left: 10px;
+  text-align: center;
+}
+.mood .btn-dark span, .mood .btn-light span {
+  position: relative;
+  top: -8px;
+  left: 5px;
 }
 .mood .active-btn {
   display: none;
@@ -114,6 +116,14 @@
   --secondary_text: #858E96;
   --boxs: #333;
   background-color: var(--bg);
+}
+.dark-theme #icon {
+  -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(284deg) brightness(109%) contrast(101%);
+          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(284deg) brightness(109%) contrast(101%);
+}
+.dark-theme .Menu-icon {
+  -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(284deg) brightness(109%) contrast(101%);
+          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(284deg) brightness(109%) contrast(101%);
 }
 
 .light-theme {
@@ -128,8 +138,13 @@
 .light-theme .closebtn {
   color: var(--primary_text);
 }
-.light-theme #icon-white {
-  display: none;
+.light-theme #icon {
+  -webkit-filter: invert(0%) sepia(83%) saturate(7500%) hue-rotate(356deg) brightness(82%) contrast(115%);
+          filter: invert(0%) sepia(83%) saturate(7500%) hue-rotate(356deg) brightness(82%) contrast(115%);
+}
+.light-theme .Menu-icon {
+  -webkit-filter: invert(0%) sepia(83%) saturate(7500%) hue-rotate(356deg) brightness(82%) contrast(115%);
+          filter: invert(0%) sepia(83%) saturate(7500%) hue-rotate(356deg) brightness(82%) contrast(115%);
 }
 
 body {
@@ -165,8 +180,10 @@ body {
   margin-top: 35px;
 }
 .navpar .logo img {
-  width: 277px;
-  height: 35px;
+  width: 250px;
+  height: 64px;
+  -webkit-filter: invert(53%) sepia(80%) saturate(1433%) hue-rotate(347deg) brightness(101%) contrast(94%);
+          filter: invert(53%) sepia(80%) saturate(1433%) hue-rotate(347deg) brightness(101%) contrast(94%);
 }
 .navpar .nav-icons .btn-back {
   width: 100px;
@@ -216,10 +233,10 @@ hr {
 }
 .Questions-con .Questions-header .time {
   position: relative;
-  top: -28px;
+  top: -30px;
   font-weight: 700;
 }
-.Questions-con .Questions-header #icon-black, .Questions-con .Questions-header #icon-white {
+.Questions-con .Questions-header #icon {
   width: 50px;
   position: relative;
   top: -10px;
@@ -272,7 +289,71 @@ hr {
   width: 50px;
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (min-height: 300px) and (max-width: 400px) {
+  .con {
+    width: 90%;
+  }
+  .btn-back-side {
+    display: block;
+  }
+  .side-width {
+    width: 80%;
+  }
+  .navpar {
+    margin-top: 20px;
+    margin-bottom: 7px;
+  }
+  .navpar .logo img {
+    width: 150px;
+    height: 40px;
+  }
+  .navpar .nav-icons .Menu-icon {
+    width: 40px;
+  }
+  .navpar .nav-icons .btn-back {
+    width: 70px;
+    height: 28px;
+    display: none;
+    position: relative;
+    top: -15px;
+    left: 20px;
+  }
+  .Questions-con {
+    width: 100%;
+    height: 500px;
+    padding: 20px 20px;
+  }
+
+  .Questions-con .Questions-header .time{
+    position: relative;
+    top: -23px;
+  }
+
+  .Questions-con .Questions-header #icon {
+    width: 40px;
+    position: relative;
+    top: -7px;
+  }
+  .Questions-con .Question p {
+    font-size: 14px;
+  }
+  .Questions-con input[type=submit] {
+    width: 60px;
+    height: 30px;
+  }
+  .Questions-con .answer-label {
+    font-size: 14px;
+  }
+  .Questions-con .Questions-footer .icons {
+    margin-top: 28px;
+  }
+  .Questions-con .Questions-footer img {
+    margin-left: 10px;
+    width: 30px;
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
   .con {
     width: 95%;
   }
@@ -288,7 +369,7 @@ hr {
   }
   .navpar .logo img {
     width: 150px;
-    height: 30px;
+    height: 40px;
   }
   .navpar .nav-icons .Menu-icon {
     width: 40px;
