--- a/css/signIn.css
+++ b/css/signIn.css
@@ -78,21 +78,39 @@ body {
   width: 80%;
   margin-top: 30px;
 }
+
+.form-container .form .error {
+  width: 100%;
+  display: inline-block;
+  font-size: 16px;
+  background-color: #f8d7da;
+  color: #58151c;
+  padding: 7px 10px;
+  height: 40px;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
 .form-container .label {
   text-align: right;
   color: var(--primary_text);
   font-weight: 300;
   margin-left: 5px;
 }
+
 .form-container #username, .form-container #password {
-  width: 90%;
+  width: 100%;
   height: 35px;
-  background-color: #818181;
+  background-color: #e4e2e2;
   margin-top: 8px;
   margin-bottom: 30px;
   border-radius: 10px;
   border: 0;
 }
+
+/* .error-con .form-container #username, .form-container #password {
+  margin-bottom: 20px;
+} */
+
 .form-container #submit-btn {
   width: 130px;
   height: 35px;
@@ -113,6 +131,11 @@ body {
   font-size: 14px;
 }
 
+/* .form-container a {
+  top : 80px;
+  margin-bottom: 5px;
+} */
+
 @media only screen and (min-width: 250px) and (max-width: 400px) {
   body {
     overflow-x: hidden;
@@ -130,10 +153,19 @@ body {
     background-size: cover;
   }
   .form-container {
-    width: 80%;
+    width: 90%;
     position: relative;
     top: 200px;
-    height: 550px;
+    height: 600px;
+  }
+
+  #error-con {
+    height: 630px;
+    top: 150px;
+  }
+
+  #error-con a {
+    top: 80px;
   }
   .form-container .form {
     width: 80%;
@@ -176,7 +208,7 @@ body {
     width: 70%;
     position: relative;
     top: 200px;
-    height: 550px;
+    height: 600px;
   }
   .form-container .form {
     width: 80%;
@@ -197,6 +229,15 @@ body {
     top: 20px;
     width: 120px;
     margin: 0 auto;
+  }
+
+  .form-container .form .error {
+    font-size: 15px;
+  }
+
+  #error-con {
+    height: 640px;
+    top: 150px;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
@@ -216,10 +257,10 @@ body {
     background-size: cover;
   }
   .form-container {
-    width: 70%;
+    width:50%;
     position: relative;
     top: 200px;
-    height: 550px;
+    height: 600px;
   }
   .form-container .form {
     width: 80%;
@@ -233,13 +274,17 @@ body {
     width: 70px;
   }
   .form-container #username, .form-container #password {
-    width: 90%;
+    width: 100%;
   }
   .form-container #submit-btn {
     position: relative;
     top: 20px;
     width: 120px;
     margin: 0 auto;
+  }
+  #error-con {
+    height: 640px;
+    top: 150px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
@@ -276,13 +321,17 @@ body {
     width: 70px;
   }
   .form-container #username, .form-container #password {
-    width: 90%;
+    width: 100%;
   }
   .form-container #submit-btn {
     position: relative;
     top: 20px;
     width: 120px;
     margin: 0 auto;
+  }
+  #error-con {
+    height: 640px;
+    top: 150px;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
@@ -302,7 +351,7 @@ body {
     background-size: cover;
   }
   .form-container {
-    width: 45%;
+    width: 35%;
     position: relative;
     top: 300px;
     height: 600px;
@@ -319,13 +368,16 @@ body {
     width: 70px;
   }
   .form-container #username, .form-container #password {
-    width: 90%;
+    width: 100%;
   }
   .form-container #submit-btn {
     position: relative;
     top: 20px;
     width: 120px;
     margin: 0 auto;
+  }
+  #error-con {
+    height: 640px;
   }
 }
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
@@ -340,19 +392,22 @@ body {
     background-size: cover;
   }
   .form-container {
-    width: 30%;
+    width: 25%;
   }
   .form-container .form {
     width: 80%;
     margin-top: 40px;
   }
   .form-container #username, .form-container #password {
-    width: 90%;
+    width: 100%;
   }
   .form-container #submit-btn {
     position: relative;
     top: 20px;
     width: 120px;
     margin: 0 auto;
+  }
+  #error-con {
+    height: 640px;
   }
 }
